--- a/views/historialMedico.html
+++ b/views/historialMedico.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="">
     <title> Historial medico</title>
 </head>
 <br>
-    <div>Información Médica</div><br>
+    <div  Class="box1">Historial Médica</div>
+    <div  class="text">Información Médica</div><br>
   <br id="form">
 
 
@@ -80,7 +82,7 @@
     required
     >
     <label for="name">Celular:</label>
-    <input type="text"
+    <input type="tel"
     id="Celular"
     Celular="Celular"
     value=""
@@ -107,8 +109,8 @@
     <input type="text"><br><br/>
 
     <label for="medicines"> ¿Habitualmento toma algun medicamento?:</label>
-    <input type="radio" id="Alergias" name="allergies" value="si"/>Si &nbsp;
-    <input type="radio" id="Alergias" name="allergies" value="si"/>No &nbsp;&nbsp;&nbsp;<br></br>
+    <input type="radio" id="medicinas" name="medicines" value="si"/>Si &nbsp;
+    <input type="radio" id="medicinas" name="medicines" value="si"/>No &nbsp;&nbsp;&nbsp;<br></br>
     <label for="medicines">¿cual?</label>
     <input type="text"
      title= "solo llenar si tiene alguna alergia el medicamento y solo se permiten letras"><br>
@@ -130,7 +132,7 @@
 
      <label for="discapacidad">¿Tiene usted alguna discapacidad?:</label>
      <input type="radio" id="Discapacidad" name="Discapacidad" value="si"/>Si &nbsp;
-    <input type="radio" id="Alergias" name="Discapacidad" value="si"/>No &nbsp;&nbsp;<br></br>
+    <input type="radio" id="discapacidad" name="Discapacidad" value="si"/>No &nbsp;&nbsp;<br></br>
     <label for="discapacidad">Alguna observación sobre su salud:</label>
     <input type="text"><br></br>
     
