--- a/views/situacionesDeEmergencia.html
+++ b/views/situacionesDeEmergencia.html
@@ -4,23 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/situacionesEmergencia.css">
     <title>SituacionesDePeligro</title>
-    <h1>Como actuar ante situaciones de peligro</h1>
 </head>
 <body>
-    <h2>En la vida cotidiana se pueden generar cituaciones de emergencia, saber como reaccionar en estas situaciones puede salvar vidas</h2>
-    <h3>Obstruccion de la via aera</h3>
-        <p>A una persona de le puede atorar en la garganta un elemto, que impida la entrada de oxigeno, en este caso lo importante es actuar con rapidez</p>
+    <header>
+        <h1 class="title">Clínica MedSalud</h1>
+        <nav class="nav1">
+          <ul class="nav">
+            <li><a href=""><i class="fa-solid fa-user"></i></a>
+              <ul>
+                <li><a href="">Iniciar Sesion</a></li>
+                <li><a href="">Registrarse</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+        <hr>
+        <nav class="flex-container">
+          <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="./clinica.html">La Clínica</a></li>
+            <li><a href="./servicios.html">Servicios</a></li>
+            <li><a href="./situacionesDeEmergencia.html">Situaciones de Emergencia</a></li>
+            <li><a href="./testDiagnostico.html">Test Diagnóstico</a></li>
+          </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="section" id="intro">
+    <h1 class="h1">Cómo actuar ante situaciones de peligro</h1>
+    <h2 class="h2">En la vida cotidiana se pueden generar situaciones de emergencia, saber como reaccionar en estas situaciones puede salvar vidas</h2><hr>
+            <article class="article" id="obstruccion">
+    <h3 class="h3">Obstruccion de la via aera</h3>
+        <p>A una persona de le puede atorar en la garganta un elemento, que impida la entrada de oxigeno, en este caso lo importante es actuar con rapidez</p>
         <h4>¿Que podemos hacer?</h4>
         <p>Debemos practicar la maniobra de Heimlich la cual procedé del siguiente modo:</p>
         <ol>     
-            <li>Abrazá a la persona por la espalda y por debajo de sus brazos.</li>
-            <li>Poné una de tus manos en puño cerrado cuatro dedos encima de su ombligo, en la línea media del estómago</li>
+            <li>Abraza a la persona por la espalda y por debajo de sus brazos.</li>
+            <li>Pon una de tus manos en puño cerrado cuatro dedos encima de su ombligo, en la línea media del estómago</li>
             <li>Coloca tu otra mano sobre el puño.</li>
             <li>Reclina tu cuerpo un poco hacia delante</li>
             <li>Hacé presión sobre el abdomen en sentido hacia atrás y arriba</li>
         </ol>
-    <h3>Electrocucion</h3>
+            </article><hr>
+            <article class="article" id="electrocucion">
+    <h3>Electrocución</h3>
         <p> El contacto con la corriente electrica puede generar quemaduras, la gravedad de la lesion dependera de en que parte del cuerpo circulo la corriente y el votaje de esta</p>
         <h4>¿Que podemos hacer?</h4>
         <ul>
@@ -33,6 +62,8 @@
             <li>Sigue estas instrucciones si tiene una quemadura.</li>
             <li>Seguí estas instrucciones si se golpeó la cabeza o alguna parte del cuerpo.</li>
         </ul>
+        </article><hr>
+        <article class="article" id="quemaduras">
     <h3>Quemaduras</h3>  
         <p>Un persona se puede quemar si alguna parte de su cuerpo queda expuesta al fuego o a una fuente de calor importante</p>
         <h4>¿Que podemos hacer?</h4>
@@ -44,6 +75,8 @@
             <li>Hacé correr agua fría de la canilla sobre la parte que se quemó.</li>
             <li>llama a emergencias o dirijite a un hospital</li>
         </ul>
+        </article><hr>
+        <article class="article" id="fracturas">
     <h3>Fracturas</h3>
         <p>Ya sea por un accidente, impacto o caída, una persona puede sufrir una o más deformaciones en sus miembros, torso o cabeza, que podrían ser fracturas o traumatismos. En ese caso, debemos tomar algunas precauciones hasta que reciba la atención médica adecuada.</p>
         <h4>¿Que podemos hacer?</h4>
@@ -56,7 +89,9 @@
         <p>Colocale a lo largo del brazo o pierna herida un objeto rígido y limpio (madera, palo, cartón grueso). El objeto debe ser más largo que el brazo o la pierna, porque también tenés que inmovilizar un poco más allá de las articulaciones, así el movimiento no le provoca más dolor. Por ejemplo, si la fractura es en el antebrazo, se debe inmovilizar también el codo y la muñeca.<br>
         Con cuidado, sujetale el objeto al brazo con un pañuelo, prenda de ropa o trapo limpio. Si la fractura es en un brazo, podés hacerle además un cabestrillo (apoyabrazo) con un pañuelo, tela o bufanda.<br>
         Sujetá el brazo en una parte no lastimada y pasale la tela alrededor del cuello.</p>
-    <h3>Cortes y heridas</h3>
+        </article><hr>
+        <article class="article" id="cortes">
+        <h3>Cortes y heridas</h3>
         <p>Uno de los accidentes domésticos más habituales son las heridas de corte. Podemos cortarnos con un objeto filoso o como consecuencia de un golpe.<br>
         En la mayoría de los casos, no son graves ni ponen en riesgo nuestra vida. Sin embargo, debemos evitar infecciones o problemas de cicatrización. </p>
         <h4>¿Que podemos hacer?</h4>
@@ -69,6 +104,8 @@
             <li>No hagas torniquete.</li>
             <li>Si sigue sangrando, llevá a la persona al hospital</li>
         </ul>
+        </article><hr>
+        <article class="article" id="convulsiones">
     <h3>Convulsiones</h3>
         <p>Cuando una persona sufre una crisis convulsiva:</p>
         <ul>
@@ -92,6 +129,8 @@
             <li>Ponerle algo en la boca (no existe el riesgo de que se trague la lengua).</li>
             <li>Dejar a la persona sola.</li>
         </ul>
+        </article><hr>
+        <article class="article" id="intoxicacion">
     <h3>intoxicaciones</h3>    
         <p>Existe un conjunto de elementos que pueden resultar nocivos para nuestro organismo si por accidente los ingerimos, respiramos o tocamos, y provocarnos una intoxicación.<br>
         Este riesgo aumenta con los más chicos, quienes por curiosidad natural suelen exponerse más fácilmente a sustancias peligrosas, como productos de limpieza, venenos, remedios, etc.<br>
@@ -106,6 +145,8 @@
             <li>Si lo respiró: llevá a la persona a un lugar abierto y bien ventilado.</li>
             <li></li>
         </ul>
+        </article><hr>
+        <article class="article" id="desmayo">
     <h3>Desmayo</h3>
         <p>Cuando una persona se desmaya, pierde de manera súbita la conciencia y se desvanece, pero no deja de respirar. El principal riesgo que puede producirse es que se golpee al perder la estabilidad o caerse.</p>
         <h4>Sintomas y causas</h4>
@@ -136,6 +177,19 @@
             <li>Hasta que no esté totalmente recuperada, no le ofrezcas comidas ni bebidas. Cuando se recupere, ofrecele agua, nunca una bebida alcohólica.</li>
             <li>Acompañala hasta que se recupere.</li>
         </ul>
-
+    </article><hr>
+    </main>
+    <footer>
+        <div class="footer">
+          <h2>Redes Sociales</h2>
+          <div class="footerIcons">
+            <span class="footerSubIcons"><i class="fa-brands fa-facebook"></i></span>
+            <span class="footerSubIcons"><i class="fa-brands fa-twitter"></i></span>
+            <span class="footerSubIcons"><i class="fa-brands fa-instagram"></i></span>
+          </div>
+        </div>
+    </footer>
+    <script src="https://kit.fontawesome.com/9fd1a302e2.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c7e1a938a5.js" crossorigin="anonymous"></script>
     </body>
 </html>
