--- a/views/donarSangre.html
+++ b/views/donarSangre.html
@@ -1,72 +1,109 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/donarSangre.css">
     <title>Donar Sangre</title>
 </head>
 <body>
     <header>
-        <h1>Donación de Sangre</h1>
-        <h2>Conoce todo lo relacionado a la donación de sangre AQUÍ</h2>
-    </header>
-    <main>
-        <section id="requisitos">
-            <h2>Requisitos para ser donante</h2>
-            <li>Ser mayor de 18 años y menor de 65</li>
-            <li>Portar documento de identidad</li>
-            <li>Pesar más de 50 kilos</li>
-            <li>No haber padecido de enfermedades de transmisión sexual o sospechar ser portador de alguna</li>
-            <li>No haber padecido de cáncer, ni tener enfermedades del corazón o los pulmones</li>
-            <li>No haber sido sometido a cirugías, transfusiones, tatuajes o piercing en los últimos 12 meses</li>
-            <li>No haber sido sometido a tratamientos odontológicos en los últimos 7 días</li>
-            <li>No padecer de infecciones o estar en tratamiento con antibióticos, antiparasitarios o antivirales</li>
-            <li>No estar en ayunas</li>
-            <li>Pasar un pequeño reconocimiento médico que incluye: toma de tensión arterial, determinación de nivel de hemoglobina, verificación del peso, cuestionario con preguntas de salud</li>
-        </section>
-        <section>
-            <article>
-                <h2>¿A quiénes van nuestras donaciones?</h2>
-                <h3>Tenemos alianzas tanto en el sector público como en el privado con las instituciones prestadoras de servicios de salud con mayor demanda de donaciones de sangre</h3>
-                <h3>Sector privado</h3>
-                <li>Fundación Cardio Infantil</li>
-                <li>Hospital Universitario San Ignacio</li>
-                <li>Instituto Nacional de Cancerología - ESE</li>
-                <li>Fundación Hospital de la Misericordia</li>
-                <h3>Sector público</h3>
-                <li>Unidad de Servicios de Salud Occidente Kennedy</li>
-                <li>El Tunal</li>
-                <li>Simón Bolívar</li>
-                <li>Hospital Santa Clara – ESE</li>
+        <h1 class="title">Clínica MedSalud</h1>
+        <nav class="nav1">
+          <ul class="nav">
+            <li><a href=""><i class="fa-solid fa-user"></i></a>
+              <ul>
+                <li><a href="">Iniciar Sesión</a></li>
+                <li><a href="">Registrarse</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+        <hr>
+        <nav class="flex-container">
+          <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="./clinica.html">La Clinica</a></li>
+            <li><a href="./servicios.html">Servicios</a></li>
+            <li><a href="./situacionesDeEmergencia.html">Situaciones de Emergencia</a></li>
+            <li><a href="./testDiagnostico.html">Test Diagnóstico</a></li>
+          </ul>
+        </nav>
+      </header>
+    <main id="main">
+        <section class="section-container">
+            <article class="article">
+                <h2 class="h2">Requisitos para ser donante</h2>
+                <nav>
+                    <ul>
+                        <li>Ser mayor de 18 años y menor de 65</li>
+                        <li>Portar documento de identidad</li>
+                        <li>Pesar más de 50 kilos</li>
+                        <li>No haber padecido de enfermedades de transmisión sexual o sospechar ser portador de alguna</li>
+                        <li>No haber padecido de cáncer, ni tener enfermedades del corazón o los pulmones</li>
+                        <li>No haber sido sometido a cirugías, transfusiones, tatuajes o piercing en los últimos 12 meses</li>
+                        <li>No haber sido sometido a tratamientos odontológicos en los últimos 7 días</li>
+                        <li>No padecer de infecciones o estar en tratamiento con antibióticos, antiparasitarios o antivirales</li>
+                        <li>No estar en ayunas</li>
+                        <li>Pasar un pequeño reconocimiento médico que incluye: toma de tensión arterial, determinación de nivel de hemoglobina, verificación del peso, cuestionario con preguntas de salud</li>
+                    </ul>
+                </nav>
+            </article>
+            <article class="article">
+                <h2 class="h2">¿A quiénes van nuestras donaciones?</h2>
+                <h3 class="h3">Tenemos alianzas tanto en el sector público como en el privado con las instituciones prestadoras de servicios de salud con mayor demanda de donaciones de sangre</h3>
+                <h4 class="h4">Sector privado</h4>
+                <nav>
+                    <ul>
+                        <li>Fundación Cardio Infantil</li>
+                        <li>Hospital Universitario San Ignacio</li>
+                        <li>Instituto Nacional de Cancerología - ESE</li>
+                        <li>Fundación Hospital de la Misericordia</li>
+                    </ul>
+                </nav>
+                <h4 class="h4">Sector público</h4>
+                <nav>
+                    <ul>
+                        <li>Unidad de Servicios de Salud Occidente Kennedy</li>
+                        <li>El Tunal</li>
+                        <li>Simón Bolívar</li>
+                        <li>Hospital Santa Clara ESE</li>
+                    </ul>
+                </nav>
             </article>
         </section>
-        <section>
-            <article>
-                <h2>¡Envíanos tus datos si estás interesado en ser donante!</h2>
+            <article class="datos">
+                <h2 class="h2">¡Envíanos tus datos si estás interesado en ser donante!</h2>
                 <form id="form">
-                    <label for="name">Nombre</label>
-                    <input type="text"><br>
-                    <label for="name">Apellido</label>
-                    <input type="text"><br>
-                    <label for="age">Edad</label>
-                    <input type="number" min="18" max="65" id="age"><br>
-                    <label for="document">Número de C.C</label>
-                    <input type="number"><br>
-                    <label for="mail">Correo electrónico</label>
-                    <input type="email" id="mail"><br>
-                    <label type="date">Reserva tu cita</label>
-                    <input type="date"><br>
-                    <input type="button" id="boton" value="Aceptar">
-                    <button type="button" id="boton2">Validar</button>
-                    <button type="submit" id="enviar">Enviar datos</button>
+                    <label for="name" class="label">Nombre</label>
+                    <input type="text" class="input" id="name" placeholder="Nombre" minlength="3" maxlenght="50" pattern="[a-zA-Z]{3-20}" title="Caracteres inválidos"><br>
+                    <label for="name" class="label">Apellido</label>
+                    <input type="text" class="input" id="lastName" placeholder="Apellido" minlength="3" maxlenght="50" pattern="[a-zA-Z]{3-20}" title="Caracteres inválidos"><br>
+                    <label for="age" class="label">Edad</label>
+                    <input type="number" class="input" id="age" placeholder="Edad" min="18" max="65"><br>
+                    <label for="document" class="label">Número de C.C</label>
+                    <input type="number" class="input" id="id" placeholder="Número de cédula"><br>
+                    <label for="mail" class="label">Correo electrónico</label>
+                    <input type="email" class="input" id="email" placeholder="Correo electrónico"><br>
+                    <label type="date" class="label">Reserva tu cita</label>
+                    <input type="date" class="input" id="date"><br>
+                    <button type="submit" class="button" id="enviar">Enviar datos</button>
                 </form>
             </article>
         </section>
         <script src="./scripts/main.js"></script>
     </main>
     <footer>
-        <h5>Fuentes consultadas: MinSalud</h5>
-    </footer>
+        <div class="footer">
+          <h2>Redes Sociales</h2>
+          <div class="footerIcons">
+            <span class="footerSubIcons"><i class="fa-brands fa-facebook"></i></span>
+            <span class="footerSubIcons"><i class="fa-brands fa-twitter"></i></span>
+            <span class="footerSubIcons"><i class="fa-brands fa-instagram"></i></span>
+          </div>
+        </div>
+      </footer>
+    <script src="https://kit.fontawesome.com/9fd1a302e2.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c7e1a938a5.js" crossorigin="anonymous"></script>
 </body>
 </html>
