--- a/views/servicios.html
+++ b/views/servicios.html
@@ -35,13 +35,13 @@
   </header>
   <main>
     <div class="serviciosMenu">
-      <div class="serviciosSubMenu"><a href="./views/citasMedicas.html"><i class="fa-solid fa-hospital fa-5x"></i>
+      <div class="serviciosSubMenu"><a href="./citasMedicas.html"><i class="fa-solid fa-hospital fa-5x"></i>
           <h2>Citas Médicas</h2>
         </a></div>
       <div class="serviciosSubMenu"><a href="./donarSangre.html"><i class="fa-solid fa-briefcase-medical fa-5x"></i>
           <h2>Donación de Sangre</h2>
         </a></div>
-      <div class="serviciosSubMenu"><a href="./views/historialMedico.html"><i
+      <div class="serviciosSubMenu"><a href="./historialMedico.html"><i
             class="fa-solid fa-file-waveform fa-5x"></i>
           <h2>Historial Médico</h2>
         </a></div>
