--- a/views/testDiagnostico.html
+++ b/views/testDiagnostico.html
@@ -24,11 +24,11 @@
     <hr>
     <nav class="flex-container">
       <ul>
-        <li><a>Inicio</a></li>
-        <li><a>La clinica</a></li>
-        <li><a>Noticias</a></li>
-        <li><a>Situaciones de Emergencia</a></li>
-        <li><a href="../views/testDiagnostico.html">Test Diagnóstico</a></li>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="./clinica.html">La Clínica</a></li>
+        <li><a href="./servicios.html">Servicios</a></li>
+        <li><a href="./situacionesDeEmergencia.html">Situaciones de Emergencia</a></li>
+        <li><a href="./testDiagnostico.html">Test Diagnóstico</a></li>
       </ul>
     </nav>
   </header>
