--- a/styles/stylessTestDiagnostico.css
+++ b/styles/stylessTestDiagnostico.css
@@ -15,7 +15,7 @@ header{
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    background-color: #DEDAD7;
+    background-color: #F7F3F0;
 }
 .title{
     display: flex;/*tratamos el elemento como elemento en bloque*/
@@ -37,15 +37,15 @@ header .nav li{
     right: 10vw;
 }
 .fa-user{ /*icon usuario*/
-    font-size: 2.6vw;
+    font-size: 2vw;
 }
 ul, ol{
     list-style: none; /*borra lo signos de la lista*/
 }
 
 .nav li a{
-    width: 4.4vw;
-    height: 4.4vw;
+    width: 4vw;
+    height: 4vw;
     background-color: #AF98C4;
     border-radius: 50%;
     color: #F8F4F1;
@@ -68,9 +68,9 @@ ul, ol{
     display: block;
     border-radius: 10px;
     background-color: #AF98C4;
-    font-size: 1.8vw;
-    width: 12vw;
-    height: 3.8vw;
+    font-size: 1vw;
+    width: calc(8vw + 2vh);
+    height: calc(2vw + 0.8vh);
     position: relative;
     text-align: center;
     padding: 0.5vw 0;
@@ -81,7 +81,7 @@ ul, ol{
     flex-direction: column;
     align-items: center;
     left: 15vw;
-    bottom: -1.8vw;
+    bottom: -0.6vw;
 }
 
 hr{
