--- a/views/clinica.html
+++ b/views/clinica.html
@@ -25,9 +25,9 @@
     <hr>
     <nav class="flex-container">
       <ul>
-        <li><a href="./index.html">Inicio</a></li>
+        <li><a href="../index.html">Inicio</a></li>
         <li><a href="./clinica.html">La Clínica</a></li>
-        <li><a href="./views/servicios.html">Servicios</a></li>
+        <li><a href="./servicios.html">Servicios</a></li>
         <li><a href="./situacionesDeEmergencia.html">Situaciones de Emergencia</a></li>
         <li><a href="./testDiagnostico.html">Test Diagnósticos</a></li>
       </ul>
