--- a/views/situacionesDeEmergencia.html
+++ b/views/situacionesDeEmergencia.html
@@ -12,7 +12,7 @@
         <h1 class="title">Clínica MedSalud</h1>
         <nav class="nav1">
           <ul class="nav">
-            <li><a href=""><i class="fa-solid fa-user"></i></a>
+            <li><a><i class="fa-solid fa-user "></i></a>
               <ul>
                 <li><a href="">Iniciar Sesion</a></li>
                 <li><a href="">Registrarse</a></li>
@@ -27,7 +27,7 @@
             <li><a href="./clinica.html">La Clínica</a></li>
             <li><a href="./servicios.html">Servicios</a></li>
             <li><a href="./situacionesDeEmergencia.html">Situaciones de Emergencia</a></li>
-            <li><a href="./testDiagnostico.html">Test Diagnóstico</a></li>
+            <li><a href="./testDiagnostico.html">Test Diagnósticos</a></li>
           </ul>
         </nav>
     </header>
