--- a/styles/citasMedicas.css
+++ b/styles/citasMedicas.css
@@ -17,7 +17,7 @@
 
     background-color: #171716;
 
-    background-image: linear-gradient(50deg,#624f6741 60%,#5f5656ad), url(../img/national-cancer-institute-fTQHPb6r4wQ-unsplash.jpg);
+    background-image: linear-gradient(50deg,#624f6741 60%,#5f5656ad), url(../assets/img/national-cancer-institute-fTQHPb6r4wQ-unsplash.png);
 
     background-repeat: no-repeat;
 
